--- a/website.css
+++ b/website.css
@@ -36,7 +36,7 @@ nav {
  a {
     color: aliceblue;
     text-decoration: none;
-    font-size: x-large;
+    font-size: medium;
     margin: 0 5px;
  }
 
