--- a/website.css
+++ b/website.css
@@ -2,7 +2,7 @@
 *{  box-sizing: border-box;
 }
 html {
-    background-color: hsl(208, 60%, 84%);
+    /* background-color: hsl(208, 60%, 84%); */
     font-size: 12px;
     font-family: sans-serif
 }
@@ -16,32 +16,69 @@ header{
     padding: 2px;
 }
 .navbar{
-    background-color: hsl(210, 3%, 38%);
+    background-color: hsl(197, 67%, 71%);
     height: 50px;
 }
 nav {
-    box-shadow: 0 0 12px -2px black;
+    /* box-shadow: 0 0 12px -2px hsl(197, 67%, 71%); */
     left: 0;
     right: 0;
     align-items: center;
-    background-color: #333333;
-    color: aliceblue;
+    background-color: hsl(196, 19%, 63%);
+    color: black;
     display: flex;
     height: 80px;
     padding: 2px;
     display: flex;
     justify-content: space-between;
- }
+}
+
+
+ /* .a {
+    color: rgb(133, 42, 42);
+    /* text-decoration: none; */
+    /* font-size: x-large; */ */
+
+/* unvisited link */
+a:link {
+    color: rgb(130, 175, 214);
+}
+/* visited link
+a:visited {
+    color: rgb(35, 139, 35);
+} */
+
+/* mouse over link */
+a:hover {
+    color: rgb(105, 178, 255);
+}
+
+/* selected link */
+a:active {
+    color: blue;
+}
+
+
+
+
+
+
+
+
  a {
-    color: aliceblue;
-    text-decoration: none;
-    font-size: large;
+    color: black;
+    /* text-decoration: none; */
+    font-size: x-large;
     margin: 0 5px;
  }
 
+ /* a:link {
+    background-color: hsl(yellow) !important;
+    color: hsl(blue);
+} */
 main {
     min-height: 50vh;
-    padding: 85px 24px 96px;
+    padding: 25px 24px 25px; */
     font-size: 25px;
   }  
 aside{
@@ -80,4 +117,3 @@ footer{
     }   
 }
 
-}
